# clab2019gscans

./: CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
Bash/: download_data.sh  plot_total_energy_spectrum.sh  plot_totalspectrum.sh  print_total_energy_spectrum.sh
Cpp/: clab2019gscans.hpp  parse_from_stdin.cpp  total_energy_spectrum_from_stdin.cpp  total_spectrum_from_stdin.cpp  total_time_energy_spectrum_from_stdin.cpp
Python/: Simple_display.py
